<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.ActivityLogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="311dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#07A0DD"
        android:text="@string/butregister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#07A0DD"
        android:text="@string/butlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etdEmail"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="120dp"
        android:background="#FFFFFF"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#686868"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etdPass"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#686868"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdEmail" />

    <EditText
        android:id="@+id/etdConfirmpass"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:hint="@string/hintConfirmPas"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#686868"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdPass" />
</androidx.constraintlayout.widget.ConstraintLayout>